# mx-sdk-rs-0.29.2-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  build-wasm.sh  sizes.sh  vm-test-build-copy.sh
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/meta/: Cargo.toml
contracts/examples/adder/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/crowdfunding-dct/: Cargo.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/digital-cash/: Cargo.toml
contracts/examples/empty/: Cargo.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/lottery-dct/: Cargo.toml
contracts/examples/multisig/: Cargo.toml
contracts/examples/order-book/pair/: Cargo.toml
contracts/examples/order-book/pair/denali/steps/: create_buy_order.steps.json  create_sell_order.steps.json
contracts/examples/order-book/pair/meta/: Cargo.toml
contracts/examples/order-book/pair/src/: common.rs  events.rs  lib.rs  orders.rs  validation.rs
contracts/examples/order-book/pair/wasm/: Cargo.toml
contracts/examples/proxy-pause/meta/: Cargo.toml
contracts/examples/token-release/meta/: Cargo.toml
contracts/feature-tests/legacy-examples/crypto-bubbles-legacy/: Cargo.toml
contracts/feature-tests/legacy-examples/crypto-bubbles-legacy/meta/: Cargo.toml
contracts/feature-tests/legacy-examples/crypto-bubbles-legacy/wasm/: Cargo.toml
dharitri-codec/: Cargo.toml
dharitri-codec-derive/: Cargo.toml
dharitri-codec/src/: lib.rs
dharitri-codec/tests/: derive_hygiene.rs
dharitri-wasm/: Cargo.toml
dharitri-wasm-debug/: Cargo.toml
dharitri-wasm-debug/src/: display_util.rs  managed_test_util.rs
dharitri-wasm-debug/tests/: derive_managed_vec_item_numbers_test.rs  sample_adder.rs
dharitri-wasm-derive/: Cargo.toml
dharitri-wasm-derive/src/: type_abi_derive.rs
dharitri-wasm-modules/: Cargo.toml
dharitri-wasm-modules/src/: lib.rs
dharitri-wasm-node/: Cargo.toml
dharitri-wasm-output/: Cargo.toml
dharitri-wasm/src/: err_msg.rs  lib.rs  log_util.rs  macros.rs
tools/erdpy-snippet-generator/: Cargo.toml
(+361 files in other folders)
