[package]
name = "proxy-pause-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "you",]

[dev-dependencies]

[dependencies.proxy-pause]
path = ".."

[dependencies.dharitri-wasm]
version = "0.4.4"
path = "../../../../dharitri-wasm"

[dependencies.dharitri-wasm-debug]
version = "0.4.4"
path = "../../../../dharitri-wasm-debug"
