[package]
name = "token-release-meta"
version = "0.0.0"
edition = "2018"
publish = false

[dev-dependencies]

[dependencies.token-release]
path = ".."

[dependencies.dharitri-wasm]
version = "0.4.4"
path = "../../../../dharitri-wasm"

[dependencies.dharitri-wasm-debug]
version = "0.4.4"
path = "../../../../dharitri-wasm-debug"

